# RM_AIM_2021_CMAKE

./: .gitignore  CMakeLists.txt  README.md
UI/UI/: UI.pro  UI.pro.user.2e75eab  mainwindow.cpp  mainwindow.h  mainwindow.ui
include/: ArmorDetector.h  CameraApi.h  CameraDefine.h  CameraStatus.h  Config.h  Serialport.h
src/: Armor.cpp  Config.cpp  Detector.cpp  main.cpp
